Authentication fixed