@@ -1,5 +1,6 @@
 package tn.esprit.syshr.config;
 
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -14,6 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -32,34 +34,59 @@ public class SecurityConfig {
         http.csrf(csrf-> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/absence/**").permitAll()
-                        .requestMatchers("/employee/**").permitAll()
-                        .requestMatchers("/retard/**").permitAll()
-                        .requestMatchers("/admin/**").permitAll()
-                        .requestMatchers("/conge/**").permitAll()
-                        .requestMatchers("/autorisation/**").permitAll()
-                        .requestMatchers("/evaluation/**").permitAll()
+                        .requestMatchers(
+                                "/absence/**",
+                                "/employee/**",  // Add this line
+                                "/retard/**",    // Add API prefix consistently
+                                "/admin/**",
+                                "/conge/**",
+                                "/autorisation/**",
+                                "/evaluation/**",
+                                "/auth/**"
+                        ).permitAll()
                         .anyRequest().authenticated())
                         .sessionManagement(session -> session
                                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                         )
-                        .authenticationProvider(authenticationProvider)
-                        .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                .authenticationProvider(authenticationProvider)
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .exceptionHandling(exception -> exception
+                        .accessDeniedHandler((request, response, accessDeniedException) -> {
+                            response.setContentType("application/json");
+                            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                            response.getWriter().write("{ \"error\": \"Access Denied\", \"message\": \"" + accessDeniedException.getMessage() + "\" }");
+                        })
+                        .authenticationEntryPoint((request, response, authException) -> {
+                            response.setContentType("application/json");
+                            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                            response.getWriter().write("{ \"error\": \"Unauthorized\", \"message\": \"" + authException.getMessage() + "\" }");
+                        })
+                );
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Add Flutter web origin (http://localhost) and Angular origin (http://localhost:4200)
-
         configuration.setAllowedOrigins(List.of(
-                "http://localhost:4200",      // Angular
-                "http://localhost:4201"    // Previous Flutter port
+                "http://localhost:4200",
+                "http://localhost:8080"
         ));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true); // If you use cookies or auth headers
+        configuration.setExposedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "Content-Disposition",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
